Hide overflow-y on scroll, to fix double scrollbar issue

--- a/nav-app/src/styles.scss
+++ b/nav-app/src/styles.scss
@@ -5,7 +5,7 @@
 @import "colors.scss";
 body {
   margin: 0;
-  margin: 0;
+  overflow-y: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
